--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,67 @@
-blinker==1.4
-Flask==0.10.1
-Flask-Login==0.3.0
-Flask-Mail==0.9.1
-Flask-SQLAlchemy==2.0
-Flask-WTF==0.12
-itsdangerous==0.24
+appnope==0.1.0
+autopep8==1.2.1
+beautifulsoup4==4.4.1
+boto==2.40.0
+bz2file==0.98
+colorama==0.3.6
+cycler==0.10.0
+Cython==0.24
+decorator==4.0.9
+gensim==0.12.4
+gnureadline==6.3.3
+greenlet==0.4.9
+ipykernel==4.2.2
+ipython==4.1.1
+ipython-genutils==0.1.0
+ipywidgets==4.1.1
 Jinja2==2.8
+jsonschema==2.5.1
+jupyter==1.0.0
+jupyter-client==4.1.1
+jupyter-console==4.1.0
+jupyter-core==4.0.6
 MarkupSafe==0.23
-python-ldap==2.4.21
-SQLAlchemy==1.0.8
-Werkzeug==0.10.4
-wheel==0.24.0
-WTForms==2.0.2
+matplotlib==1.5.1
+mistune==0.7.1
+msgpack-python==0.4.7
+nbconvert==4.1.0
+nbformat==4.0.1
+neovim==0.1.5
+nltk==3.2.1
+nose==1.3.7
+notebook==4.1.0
+numpy==1.10.4
+pandas==0.16.2
+path.py==8.1.2
+pbr==1.8.1
+pep8==1.7.0
+pexpect==4.0.1
+pickleshare==0.6
+ptyprocess==0.5.1
+pyaml==15.8.2
+pyemd==0.2.0
+Pygments==2.1.1
+pyparsing==2.1.0
+python-dateutil==2.5.0
+pytz==2015.7
+PyYAML==3.11
+pyzmq==15.2.0
+qtconsole==4.2.0
+requests==2.9.1
+root-numpy==4.4.0
+scikit-learn==0.17.1
+scipy==0.16.1
+-e git+git@github.com:bixel/sEins-Module.git@12ac481b6ef35c366db44aa301d5daf7033e7a19#egg=seins
+simplegeneric==0.8.1
+six==1.10.0
+sklearn==0.0
+smart-open==1.3.3
+stevedore==1.10.0
+sympy==0.7.6.1
+terminado==0.6
+tornado==4.3
+traitlets==4.1.0
+uncertainties==2.4.8.1
+virtualenv==13.1.2
+virtualenv-clone==0.2.6
+virtualenvwrapper==4.7.1
