--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,92 @@
 appnope==0.1.0
-autopep8==1.2.1
-beautifulsoup4==4.4.1
-boto==2.40.0
-bz2file==0.98
-colorama==0.3.6
+autopep8==1.2.4
+backports-abc==0.4
+backports.shutil-get-terminal-size==1.0.0
+backports.ssl-match-hostname==3.5.0.1
+certifi==2016.9.26
+click==6.6
+configparser==3.5.0
 cycler==0.10.0
-Cython==0.24
-decorator==4.0.9
-gensim==0.12.4
+decorator==4.0.10
+dj-database-url==0.4.1
+entrypoints==0.2.2
+enum34==1.1.6
+flake8==3.0.4
+Flask==0.11.1
+Flask-Sockets==0.2.1
+funcsigs==1.0.2
+functools32==3.2.3.post2
+futures==3.0.5
+gevent==1.1.2
+gevent-websocket==0.9.5
 gnureadline==6.3.3
-greenlet==0.4.9
-ipykernel==4.2.2
-ipython==4.1.1
+greenlet==0.4.10
+gunicorn==19.6.0
+ipykernel==4.5.0
+ipython==5.1.0
 ipython-genutils==0.1.0
-ipywidgets==4.1.1
+ipywidgets==5.2.2
+itsdangerous==0.24
 Jinja2==2.8
+joblib==0.10.3
 jsonschema==2.5.1
 jupyter==1.0.0
-jupyter-client==4.1.1
-jupyter-console==4.1.0
-jupyter-core==4.0.6
+jupyter-client==4.4.0
+jupyter-console==5.0.0
+jupyter-core==4.2.0
 MarkupSafe==0.23
-matplotlib==1.5.1
-mistune==0.7.1
-msgpack-python==0.4.7
-nbconvert==4.1.0
-nbformat==4.0.1
-neovim==0.1.5
-nltk==3.2.1
+matplotlib==1.5.3
+mccabe==0.5.2
+mistune==0.7.3
+mock==2.0.0
+mpmath==0.19
+msgpack-python==0.4.8
+nbconvert==4.2.0
+nbformat==4.1.0
+neovim==0.1.10
 nose==1.3.7
-notebook==4.1.0
-numpy==1.10.4
-pandas==0.16.2
-path.py==8.1.2
-pbr==1.8.1
+notebook==4.2.3
+numpy==1.11.2
+pandas==0.19.0
+path.py==8.2.1
+pathlib2==2.1.0
+pbr==1.10.0
+peewee==2.8.5
 pep8==1.7.0
-pexpect==4.0.1
-pickleshare==0.6
+pexpect==4.2.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.8
 ptyprocess==0.5.1
-pyaml==15.8.2
-pyemd==0.2.0
-Pygments==2.1.1
-pyparsing==2.1.0
-python-dateutil==2.5.0
-pytz==2015.7
-PyYAML==3.11
-pyzmq==15.2.0
-qtconsole==4.2.0
-requests==2.9.1
-root-numpy==4.4.0
-scikit-learn==0.17.1
-scipy==0.16.1
--e git+git@github.com:bixel/sEins-Module.git@12ac481b6ef35c366db44aa301d5daf7033e7a19#egg=seins
+pyaml==16.9.0
+pycodestyle==2.0.0
+pyflakes==1.3.0
+Pygments==2.1.3
+pygobject==3.22.0
+pyparsing==2.1.10
+python-dateutil==2.5.3
+pyttsx==1.1
+pytz==2016.7
+PyYAML==3.12
+pyzmq==16.0.0
+qtconsole==4.2.1
+root-numpy==4.5.2
+scipy==0.18.1
 simplegeneric==0.8.1
+singledispatch==3.4.0.3
 six==1.10.0
-sklearn==0.0
-smart-open==1.3.3
-stevedore==1.10.0
-sympy==0.7.6.1
+SpeechRecognition==3.4.6
+stevedore==1.18.0
+sympy==1.0
 terminado==0.6
-tornado==4.3
-traitlets==4.1.0
-uncertainties==2.4.8.1
-virtualenv==13.1.2
+tornado==4.4.2
+traitlets==4.3.1
+trollius==2.1
+tzlocal==1.3
+uncertainties==3.0.1
+vboxapi==1.0
+virtualenv==15.0.3
 virtualenv-clone==0.2.6
-virtualenvwrapper==4.7.1
+virtualenvwrapper==4.7.2
+wcwidth==0.1.7
+Werkzeug==0.11.11
+widgetsnbextension==1.2.6
