--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,18 @@
-appnope==0.1.0
-autopep8==1.2.4
-backports-abc==0.4
-backports.shutil-get-terminal-size==1.0.0
-backports.ssl-match-hostname==3.5.0.1
-certifi==2016.9.26
+blinker==1.4
 click==6.6
-configparser==3.5.0
-cycler==0.10.0
-decorator==4.0.10
-dj-database-url==0.4.1
-entrypoints==0.2.2
-enum34==1.1.6
-flake8==3.0.4
 Flask==0.11.1
-Flask-Sockets==0.2.1
-funcsigs==1.0.2
-functools32==3.2.3.post2
-futures==3.0.5
-gevent==1.1.2
-gevent-websocket==0.9.5
-gnureadline==6.3.3
-greenlet==0.4.10
-gunicorn==19.6.0
-ipykernel==4.5.0
-ipython==5.1.0
-ipython-genutils==0.1.0
-ipywidgets==5.2.2
+Flask-Admin==1.4.2
+Flask-Login==0.4.0
+Flask-Mail==0.9.1
+Flask-WTF==0.13.1
+freeze==1.0.10
 itsdangerous==0.24
 Jinja2==2.8
-joblib==0.10.3
-jsonschema==2.5.1
-jupyter==1.0.0
-jupyter-client==4.4.0
-jupyter-console==5.0.0
-jupyter-core==4.2.0
+ldap3==2.1.0
 MarkupSafe==0.23
-matplotlib==1.5.3
-mccabe==0.5.2
-mistune==0.7.3
-mock==2.0.0
-mpmath==0.19
-msgpack-python==0.4.8
-nbconvert==4.2.0
-nbformat==4.1.0
-neovim==0.1.10
-nose==1.3.7
-notebook==4.2.3
-numpy==1.11.2
-pandas==0.19.0
-path.py==8.2.1
-pathlib2==2.1.0
-pbr==1.10.0
 peewee==2.8.5
-pep8==1.7.0
-pexpect==4.2.1
-pickleshare==0.7.4
-prompt-toolkit==1.0.8
-ptyprocess==0.5.1
-pyaml==16.9.0
-pycodestyle==2.0.0
-pyflakes==1.3.0
-Pygments==2.1.3
-pygobject==3.22.0
-pyparsing==2.1.10
-python-dateutil==2.5.3
-pyttsx==1.1
-pytz==2016.7
-PyYAML==3.12
-pyzmq==16.0.0
-qtconsole==4.2.1
-root-numpy==4.5.2
-scipy==0.18.1
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
+pyasn1==0.1.9
 six==1.10.0
-SpeechRecognition==3.4.6
-stevedore==1.18.0
-sympy==1.0
-terminado==0.6
-tornado==4.4.2
-traitlets==4.3.1
-trollius==2.1
-tzlocal==1.3
-uncertainties==3.0.1
-vboxapi==1.0
-virtualenv==15.0.3
-virtualenv-clone==0.2.6
-virtualenvwrapper==4.7.2
-wcwidth==0.1.7
 Werkzeug==0.11.11
-widgetsnbextension==1.2.6
+wtf-peewee==0.2.6
+WTForms==2.1
