--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "start": "webpack --watch --progress",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
