--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,23 @@
 blinker==1.4
-click==6.6
-Flask==0.11.1
+click==6.7
+Flask==0.12
 Flask-Admin==1.4.2
 Flask-Login==0.4.0
 Flask-Mail==0.9.1
-Flask-WTF==0.13.1
-freeze==1.0.10
+flask-mongoengine==0.8.2
+Flask-WTF==0.14.2
 itsdangerous==0.24
-Jinja2==2.8
-ldap3==2.1.0
+Jinja2==2.9.4
+ldap3==2.2.0
 MarkupSafe==0.23
-peewee==2.8.5
+mongoengine==0.11.0
+pendulum==1.0.0
 pyasn1==0.1.9
+pymongo==3.4.0
+python-dateutil==2.6.0
+pytz==2016.10
+pytzdata==2016.10
 six==1.10.0
-Werkzeug==0.11.11
-wtf-peewee==0.2.6
+tzlocal==1.3
+Werkzeug==0.11.15
 WTForms==2.1
