--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.1.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "classnames": "^2.2.5",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
-    "webpack": "^1.15.0",
-    "webpack-dev-server": "^1.16.5"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^2.0.9",
+    "webpack-dev-server": "^3.0.0"
   },
   "scripts": {
     "start": "webpack-dev-server --hot --inline --progress",
