--- a/testing/.env-template
+++ b/testing/.env-template
@@ -1,8 +1,8 @@
 export FLASK_APP='coffee.py'
 export FLASK_ENV='development'
-export COFFEE_SECRET_KEY='secret'
-export COFFEE_DEBUG='True'
-export COFFEE_LDAP_HOST='localhost'
-export COFFEE_LDAP_SEARCH_BASE='ou=people,dc=coffee,dc=ldap'
-export COFFEE_LDAP='True'
-export COFFEE_LDAP_TLS='False'
+export SECRET_KEY='secret'
+export DEBUG='True'
+export LDAP_HOST='localhost'
+export LDAP_SEARCH_BASE='ou=people,dc=coffee,dc=ldap'
+export LDAP='True'
+export LDAP_TLS='False'
